syntax="proto3";

option go_package="github.com/yishak-cs/CleanGrpc";

message CreateUserRequest{
    string name=1;
    string email=2;
};

message Response{
    string status=1;
}

message SingleUserRequest{
    string id=1;
}

message UserResponse{
    string id = 1;
    string name = 2;
    string email = 3;
}

message Empty{}

message UsersList{
    repeated UserResponse users=1;
}

message UpdateUserRequest{
    int64 id = 1;
    string name = 2;
    string email = 3;
}

service UserService{
    rpc CreateUser(CreateUserRequest) returns (Response);
    rpc GetUsersList(Empty) returns (UsersList);
    rpc GetUser(SingleUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (Response);
    rpc DeleteUser(SingleUserRequest) returns (Response);
}